fix: input @ password components alignement

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,10 +30,6 @@ html, body {
   font-weight: normal;
 }
 
-app-password .p-inputwrapper {
-  width: 100%!important;
-}
-
 .ng-main {
   background-color: var(--main-background);
   height: calc(100% - 50px);
